--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -1,22 +1,20 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: Poppins;
     box-sizing: border-box;
     outline: none;
-  }
-  
+  } 
   .container {
     width: 100vw;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ececec;
+    background-color: #e7e7e7;
   }
   
   *::selection {
-    background: #6358dc;
+    background: black;
     color: white;
   }
- 
+  
