--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #e7e7e7;
+    background-color: neutral;
   }
   
   *::selection {
