--- a/client/src/components/styles.module.scss
+++ b/client/src/components/styles.module.scss
@@ -1,5 +1,5 @@
 .formContainer {
-    background-color: white;
+    background-color:white;
     min-width: 300px;
     width: 60%;
     max-width: 500px;
@@ -17,7 +17,7 @@
     h2 {
       font-size: 30px;
       font-weight: bolder;
-      color: #6358dc;
+      color: neutral;
     }
   
     form {
@@ -67,12 +67,12 @@
         font-weight: 700;
         font-size: 16px;
         color: white;
-        background-color: #6358dc;
+        background-color: #0586ff;
         transition-duration: 0.3s;
       }
   
       button:hover {
-        background-color: #4235d6;
+        background-color: #0b55f5;
       }
   
       p {
@@ -81,7 +81,7 @@
   
         b {
           cursor: pointer;
-          color: #6358dc;
+          color: primary  ;
         }
   
         b:hover {
